testing hack to redirect command to bash