@@ -55,10 +55,11 @@ public class DockerApiController {
         }
     }
 
-    protected ArrayList<String> getTerminalOutput(String command, String[] arguments) throws Exception {
+    protected ArrayList<String> getTerminalOutput(String command) throws Exception {
         ArrayList<String> output = new ArrayList<String>();
         ArrayList<String> errorOutput = new ArrayList<String>();
-        final Process p = Runtime.getRuntime().exec(command, arguments);
+
+        final Process p = Runtime.getRuntime().exec(new String[]{"bash", "-c", command});
 
         new Thread(new Runnable() {
             public void run() {
@@ -81,11 +82,8 @@ public class DockerApiController {
         p.waitFor();
 
         if (errorOutput.size() > 0) {
-            String message = command + " ";
+            String message = command;
 
-            for (String arg : arguments) {
-                message = String.format("%s %s", message, arg);
-            }
             message = String.format("%s **********", message);
             for (String line : output) {
                 message = String.format("%s *** %s", message, line);
@@ -103,9 +101,8 @@ public class DockerApiController {
     protected Swarm getSwarm() throws Exception {
         String name = "";
 
-        String command = "docker stack ls";
-        String[] arguments = { "--format '{{.Name}}'" };
-        ArrayList<String> output = this.getTerminalOutput(command, arguments);
+        String command = "docker stack ls --format '{{.Name}}'";
+        ArrayList<String> output = this.getTerminalOutput(command);
 
         if (!output.isEmpty()) {
             name = output.get(0).split(" ")[0];
@@ -116,9 +113,8 @@ public class DockerApiController {
 
     protected ArrayList<Node> getNodes() throws Exception {
 
-        String command = "docker node ls";
-        String[] arguments = { "--format '{{.ID}} {{.Hostname}} {{.Status}} {{.Availability}} {{.ManagerStatus}}'" };
-        ArrayList<String> output = this.getTerminalOutput(command, arguments);
+        String command = "docker node ls --format '{{.ID}} {{.Hostname}} {{.Status}} {{.Availability}} {{.ManagerStatus}}'" ;
+        ArrayList<String> output = this.getTerminalOutput(command);
 
         ArrayList<Node> nodes = new ArrayList<Node>();
 
@@ -136,10 +132,8 @@ public class DockerApiController {
         ArrayList<Service> services = new ArrayList<Service>();
 
         if (!swarmName.equals("")) {
-
-            String command = String.format("%s %s", "docker stack services", swarmName);
-            String[] arguments = { "--format '{{.ID}} {{.Mode}} {{.Replicas}} {{.Image}}'" };
-            ArrayList<String> output = this.getTerminalOutput(command, arguments);
+            String command = String.format("%s %s %s","docker stack services", swarmName, "--format '{{.ID}} {{.Mode}} {{.Replicas}} {{.Image}}'"); 
+            ArrayList<String> output = this.getTerminalOutput(command);
 
             if (!output.isEmpty()) {
                 for (String line : output) {
@@ -157,9 +151,8 @@ public class DockerApiController {
         ArrayList<Container> containers = new ArrayList<Container>();
 
         if (!serviceID.equals("")) {
-            String command = String.format("%s %s", "docker service ps", serviceID);
-            String[] arguments = { "--format '{{.Name}} {{.Image}} {{.Node}} {{.CurrentState}}'" };
-            ArrayList<String> output = this.getTerminalOutput(command, arguments);
+            String command = String.format("%s %s %s","docker service ps", serviceID, "--format '{{.Name}} {{.Image}} {{.Node}} {{.CurrentState}}'");
+            ArrayList<String> output = this.getTerminalOutput(command);
 
             ArrayList<String> alreadyFoundContainers = new ArrayList<String>();
 
